--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "test": "bmocha --reporter spec test/*-test.js"
   },
   "dependencies": {
-    "bsert": "~0.0.12"
+    "bsert": "git+https://github.com/raptoracle/bsert.git#semver:~0.0.13",
   },
   "devDependencies": {
-    "bmocha": "^2.1.0",
-    "bts-type-deps": "^0.0.3"
+    "bmocha": "git+https://github.com/raptoracle/bmocha.git#semver:=2.2.0"
+    "bts-type-deps": "git+https://github.com/raptoracle/bts-type-deps.git#semver:=0.0.3"
   },
   "engines": {
     "node": ">=14.0.0"
