--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "test": "bmocha --reporter spec test/*-test.js"
   },
   "dependencies": {
-    "bsert": "git+https://github.com/raptoracle/bsert.git#semver:~0.0.13",
+    "bsert": "git+https://github.com/raptoracle/bsert.git#semver:~0.0.13"
   },
   "devDependencies": {
-    "bmocha": "git+https://github.com/raptoracle/bmocha.git#semver:=2.2.0"
+    "bmocha": "git+https://github.com/raptoracle/bmocha.git#semver:=2.2.0",
     "bts-type-deps": "git+https://github.com/raptoracle/bts-type-deps.git#semver:=0.0.3"
   },
   "engines": {
